--- a/page1.html
+++ b/page1.html
@@ -19,16 +19,12 @@
     <link href='https://fonts.googleapis.com/css?family=Expletus+Sans' rel='stylesheet' type='text/css'>
 
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <!-- jquery cdn -->
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-
-    <!-- <script src="http://css-tricks.com/examples/StarryNightMoving/js/jquery-1.3.2.min.js" type="text/javascript"></script>
-
-    <script src="http://css-tricks.com/examples/StarryNightMoving/js/jquery.backgroundPosition.js" type="text/javascript"></script> -->
-
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
 
     <script type="text/javascript">
@@ -48,16 +44,20 @@
       // name effect
       $(function () {
         $('.name').hide().fadeIn();
-        var $header = $('#header');
-        $header.hide().each(function(index) {
+        var $title = $('#title');
+        $title.hide().each(function(index) {
           $(this).delay(900 * index).fadeIn(900);
         });
       });
 
       // scroll-down
-      // $('html, body').animate({
-      //   scrollTop: $("#row2").offset().top
-      // }, 1000);
+
+  //     $('.scroll-down').animate({
+  //     scrollTop: $("#row2").offset().top
+  // }, 1000);
+
+
+    // <!-- super simple slider - testimonials -->
 
 
     </script>
@@ -65,14 +65,13 @@
 </head>
 
 <body>
-
   <!-- first block header -->
     <header>
-       <!-- <div id="background"></div>
-       <div id="midground"></div> -->
-
+      <script src="add-content.js"></script>
+          <div id="title">
           <div class="name">CELSO</div>
           <div class="lastN"> RODRIGUES</div>
+        </div>
 
    <!-- social media  -->
    <div id="social">
@@ -99,7 +98,7 @@
 
    <!-- scroll down -->
    <div class="scroll-down">
-    <a href="#"><i class="fa fa-angle-double-down"></i></a>
+    <a href="#row2"><i class="fa fa-angle-double-down"></i></a>
 
    </div>
 
@@ -110,7 +109,7 @@
      <div id="row2">
 
        <div class="about">
-         <b>DATA ANALYST | FRONT END WEB DEVELOPER</b>
+         <b>DATA ANALYST | FRONT END DEVELOPER</b>
        </div>
 
        <div class="slideshow">
@@ -164,13 +163,13 @@
 
        <div class="flexbox-container">
 
-       	<div><li id="one"><i class="fa fa-cog fa-spin"></i><a href="#" targert="_blank">Project 1</a></li>
+       	<div><li id="one"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/gymbuddy.html" targert="_blank">Project 1</a></li>
         </div>
 
-       	<div><li id="two"><i class="fa fa-cog fa-spin"></i><a href="#" target="_blank">Project 2</a></li>
+       	<div><li id="two"><i class="fa fa-cog fa-spin"></i><a href="https://gomockingbird.com/mockingbird/#cjjp3j5/0RGXLg" target="_blank">Project 2</a></li>
         </div>
 
-        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="#" target="_blank">Project 3</a></li></div>
+        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/global-fluency/gf.html" target="_blank">Project 3</a></li></div>
 
        </div>
 
@@ -188,13 +187,27 @@
 
 </div>
 
+<!-- testimonials block / section testimonials in css -->
+     <div id="row3A">
+
+         <div class="testimonial">Testimonials</div>
+
+
+         </div>
+
+      </div>
+
 
 <!-- contact block / section 4 in css -->
      <div id="row4">
 
          <div class="chat">Let's Connect!<i class="fa fa-comments-o"></i></div>
 
+         <!-- scroll up -->
+         <div class="scroll-up">
+          <a href="#title"><i class="fa fa-angle-double-up"></i></a>
 
+         </div>
      </div>
 
    </section>
