--- a/page1.html
+++ b/page1.html
@@ -26,6 +26,9 @@
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
+    <!-- slider show -->
+
+
 
     <script type="text/javascript">
 
@@ -56,8 +59,6 @@
   //     scrollTop: $("#row2").offset().top
   // }, 1000);
 
-
-    // <!-- super simple slider - testimonials -->
 
 
     </script>
@@ -192,6 +193,14 @@
 
          <div class="testimonial">Testimonials</div>
 
+         <div class="quote"><p>"How is it to work with Celso?..." <i class="fa fa-users"></i></p></div>
+
+         <div class="horizon-swiper">
+            <div><img src="file:///Users/celsorodrigues/Documents/pictures/carmel.JPG" width:"640" height:"350"></div>
+
+            <div><img src="file:///Users/celsorodrigues/Documents/pictures/Tahoe.JPG" width:"640" height:"350"></div>
+
+            <div><img src="file:///Users/celsorodrigues/Documents/pictures/jumper.JPG" width:"640" height:"350"></div>
 
          </div>
 
