--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
          <div class="quote"><p>"How is it to work with Celso?..." <i class="fa fa-users"></i></p></div>
 
          <div class="horizon-swiper">
-            <div><img src="file:///Users/celsorodrigues/Documents/pictures/IMG_5667.JPG" width:"640" height:"350"></div>
+            <div><img src="file:///Users/celsorodrigues/Documents/pictures/IMG_5667.jpg" width:"640" height:"350"></div>
 
             <div><img src="file:///Users/celsorodrigues/Documents/pictures/IMG_5668.JPG" width:"640" height:"350"></div>
 
@@ -228,7 +228,7 @@
          <div class="email">
             <a href="mailto:celsojrnet78@gmail.com">email Celso</a>
          </div>
-         
+
          <!-- scroll up -->
          <div class="note">
            <a href="#social">on social media</a>
