--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
      <div id="row2">
 
        <div class="about">
-         <b>DATA ANALYST | FRONT END DEVELOPER</b>
+         <b>JR DATA ANALYST | FRONT END DEVELOPER</b>
        </div>
 
        <div class="slideshow">
