changed to relative paths

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
        <div class="slideshow">
          <div>
-           <img src="file://localhost/Users/celsorodrigues/Documents/pictures/yosemite.JPG" height="430" width="250"/>
+           <img src="yosemite.JPG" height="430" width="250"/>
          </div>
          <div>
            <img src="file:///Users/celsorodrigues/Documents/pictures/webpic1a.JPG" height="430" width="250"/>
@@ -199,9 +199,9 @@
          <div class="quote"><p>"How is it to work with Celso?..." <i class="fa fa-users"></i></p></div>
 
          <div class="horizon-swiper">
-            <div><img src="file:///Users/celsorodrigues/Documents/pictures/IMG_5667.jpg" width:"640" height:"350"></div>
+            <div><img src="IMG_5667.jpg" width:"640" height:"350"></div>
 
-            <div><img src="file:///Users/celsorodrigues/Documents/pictures/IMG_5668.JPG" width:"640" height:"350"></div>
+            <div><img src="IMG_5668.JPG" width:"640" height:"350"></div>
 
             <div><img src="file:///Users/celsorodrigues/Documents/pictures/IMG_5669.JPG" width:"640" height:"350"></div>
 
