added pics and changed to relative paths

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
            <img src="yosemite.JPG" height="430" width="250"/>
          </div>
          <div>
-           <img src="file:///Users/celsorodrigues/Documents/pictures/webpic1a.JPG" height="430" width="250"/>
+           <img src="webpic1a.JPG" height="430" width="250"/>
          </div>
          <div>
-           <img src="file://localhost/Users/celsorodrigues/Documents/pictures/nyc.JPG" height="430" width="250"/>
+           <img src="nyc.JPG" height="430" width="250"/>
          </div>
        </div>
 
@@ -136,7 +136,7 @@
          <hr>
          <div class="icons">
 
-           <li><img src="file:///Users/celsorodrigues/Downloads/skills.svg" height="420" width="400" /></li>
+           <li><img src="skills.svg" height="420" width="400" /></li>
 
          </div>
        </div>
@@ -203,17 +203,17 @@
 
             <div><img src="IMG_5668.JPG" width:"640" height:"350"></div>
 
-            <div><img src="file:///Users/celsorodrigues/Documents/pictures/IMG_5669.JPG" width:"640" height:"350"></div>
+            <div><img src="IMG_5669.JPG" width:"640" height:"350"></div>
 
-            <div><img src="file:///Users/celsorodrigues/Documents/pictures/IMG_5670.JPG" width:"640" height:"350"></div>
+            <div><img src="IMG_5670.JPG" width:"640" height:"350"></div>
 
-            <div><img src="file:///Users/celsorodrigues/Documents/pictures/IMG_5672.JPG" width:"640" height:"350"></div>
+            <div><img src="IMG_5672.JPG" width:"640" height:"350"></div>
 
-            <div><img src="file:///Users/celsorodrigues/Documents/pictures/IMG_5674.JPG" width:"640" height:"350"></div>
+            <div><img src="IMG_5674.JPG" width:"640" height:"350"></div>
 
-            <div><img src="file:///Users/celsorodrigues/Documents/pictures/IMG_5675.JPG" width:"640" height:"350"></div>
+            <div><img src="IMG_5675.JPG" width:"640" height:"350"></div>
 
-            <div><img src="file:///Users/celsorodrigues/Documents/pictures/IMG_5677.JPG" width:"640" height:"350"></div>
+            <div><img src="IMG_5677.JPG" width:"640" height:"350"></div>
 
          </div>
 
