--- a/index.html
+++ b/index.html
@@ -167,25 +167,30 @@
 
        <div class="flexbox-container">
 
-       	<div><li id="one"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/gymbuddy.html" targert="_blank">Project 1</a></li>
+       	<div>
+
+          <li id="one"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/gymbuddy.html" targert="_blank">Front End - Project 1</a>
+            <p><a href="https://gomockingbird.com/mockingbird/#cjjp3j5/0RGXLg" targert="_blank">App Wireframing</a></p>
+            <p><a href="http://celsojrnet.github.io/fewd/gymbuddy-stats.html" targert="_blank">App Final Stats</a></p>
+      </li>
         </div>
 
-       	<div><li id="two"><i class="fa fa-cog fa-spin"></i><a href="https://gomockingbird.com/mockingbird/#cjjp3j5/0RGXLg" target="_blank">Project 2</a></li>
+       	<div><li id="two"><i class="fa fa-cog fa-spin"></i><a href="#" target="_blank">Front End - Project 2</a></li>
         </div>
 
-        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/global-fluency/gf.html" target="_blank">Project 3</a></li></div>
+        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/global-fluency/gf.html" target="_blank">Front End - Project 3</a></li></div>
 
        </div>
 
        <div class="flexbox-container">
 
-       	<div><li id="one"><i class="fa fa-cog fa-spin"></i><a href="#" targert="_blank">Project 4</a></li>
+       	<div><li id="one"><i class="fa fa-cog fa-spin"></i><a href="#" targert="_blank">Data Analysis - Project 4</a></li>
         </div>
 
-       	<div><li id="two"><i class="fa fa-cog fa-spin"></i><a href="#" target="_blank">Project 5</a></li>
+       	<div><li id="two"><i class="fa fa-cog fa-spin"></i><a href="#" target="_blank">Data Analysis - Project 5</a></li>
         </div>
 
-        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="#" target="_blank">Project 6</a></li></div>
+        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="#" target="_blank">Data Analysis - Project 6</a></li></div>
 
        </div>
 
@@ -199,7 +204,7 @@
          <div class="quote"><p>"How is it to work with Celso?..." <i class="fa fa-users"></i></p></div>
 
          <div class="horizon-swiper">
-            <div><img src="IMG_5667.jpg" width:"640" height:"350"></div>
+            <div><img src="IMG_5667.JPG" width:"640" height:"350"></div>
 
             <div><img src="IMG_5668.JPG" width:"640" height:"350"></div>
 
