added excel files

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             I successfully completed a 10 week <b>Front End Web Development</b> program and have immersed myself in a 10 week <b>Data Analysis</b> circuit. The process of never to stop learning is certainly what I strive for. My top three core values are:
           </p>
           <p>
-            <b>Passionate about what I do</b> - A few years back, I realized that technology is my passion. I took a leap of faith, moved to SF and got myself into this ever-growing tech community.<br><b>Social engagement</b>  - In all of my professional roles, I have always been able to build trust, organically connect with people, reveal genuine sympathy and charisma for others.</br><b>Challenge taker</b> - Life (<i>in all aspects</i>) would be dull and dejected without obstacles. Taking on any challenge is the reassurance of my tenacious spirit and causation.</p>
+            <b>Passionate about what I do</b> - A few years back, I realized that technology is my passion. I took a leap of faith by moving to SF, got myself involved and connected into this ever-growing tech community.<br><b>Social engagement</b>  - In all of my professional roles, I have always been able to build trust, organically connect with people, reveal genuine sympathy and charisma for others.</br><b>Challenge taker</b> - Life (<i>in all aspects</i>) would be dull and dejected without obstacles. Taking on any challenge is the reassurance of my tenacious spirit and causation.</p>
 
               <hr>
              <q><i>There is no such thing as information overload, just bad design. If something is cluttered and/or confusing, fix your design.</i></q>
@@ -184,13 +184,13 @@
 
        <div class="flexbox-container">
 
-       	<div><li id="one"><i class="fa fa-cog fa-spin"></i><a href="#" targert="_blank">Data Analysis - Project 1</a></li>
+       	<div><li id="one"><i class="fa fa-cog fa-spin"></i><a href="https://onedrive.live.com/redir?page=view&resid=3BC36521E354163F!147&authkey=!AJ_ISk6ZdylJosY" targert="_blank">Data Analysis - Project 1</a></li>
         </div>
 
-       	<div><li id="two"><i class="fa fa-cog fa-spin"></i><a href="#" target="_blank">Data Analysis - Project 2</a></li>
+       	<div><li id="two"><i class="fa fa-cog fa-spin"></i><a href="https://onedrive.live.com/redir?page=view&resid=3BC36521E354163F!149&authkey=!AA9XHLgJr81zPHU" target="_blank">Data Analysis - Project 2</a></li>
         </div>
 
-        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="#" target="_blank">Data Analysis - Project 3</a></li></div>
+        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="https://onedrive.live.com/redir?page=view&resid=3BC36521E354163F!137&authkey=!AAH0-lt2NW6PptE" target="_blank">Data Analysis - Project 3</a></li></div>
 
        </div>
 
