--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Page1</title>
+    <title>Celso</title>
 
     <link rel="stylesheet" href="celso1.css" media="screen" title="text/css">
     <link rel="stylesheet" href="celso1.css" media="screen and (max-width:600px)">
