--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
          <div class="title2"><b>ABOUT ME</b></div>
          <hr>
           <p>
-            I successfully completed a 10 week <b>Front End Web Development</b> program and have immersed myself in a 10 week <b>Data Analysis</b> circuit. The process of never to stop learning is certainly what I strive for. My top three core values are:
+            I successfully completed a 10 week <b>Front End Web Development</b> program and immersed myself in another 10 week <b>Data Analysis Circuit</b>. The process of never to stop learning is certainly what I strive for. My top three core values are:
           </p>
           <p>
             <b>Passionate about what I do</b> - A few years back, I realized that technology is my passion. I took a leap of faith by moving to SF, got myself involved and connected into this ever growing tech community.<br><b>Social engagement</b>  - In all of my professional roles, I have always been able to build trust, organically connect with people, reveal genuine sympathy and charisma for others.</br><b>Challenge taker</b> - Life (<i>in all aspects</i>) would be dull and dejected without obstacles. Taking on any challenge is the reassurance of my tenacious spirit and causation.</p>
