--- a/index.html
+++ b/index.html
@@ -129,14 +129,20 @@
        </div>
 
        <div class="slideshow">
-         <div>
+         <!-- <div>
            <img src="yosemite.JPG" height="430" width="250"/>
-         </div>
+         </div> -->
          <div>
            <img src="webpic1a.JPG" height="430" width="250"/>
          </div>
          <div>
            <img src="nyc.JPG" height="430" width="250"/>
+         </div>
+         <div>
+           <img src="file:///Users/celsorodrigues/Documents/pictures/photo7.JPG" height="430" width="250"/>
+         </div>
+         <div>
+           <img src="file:///Users/celsorodrigues/Documents/pictures/photo8.JPG" height="430" width="250"/>
          </div>
        </div>
 
