omg tag changed

--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
            <img src="nyc.JPG" height="430" width="250"/>
          </div>
          <div>
-           <img src="file:///Users/celsorodrigues/Documents/pictures/photo7.JPG" height="430" width="250"/>
+           <img src="photo7.JPG" height="430" width="250"/>
          </div>
          <div>
-           <img src="file:///Users/celsorodrigues/Documents/pictures/photo8.JPG" height="430" width="250"/>
+           <img src="photo8.JPG" height="430" width="250"/>
          </div>
        </div>
 
