--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
    <hr id="hrA">
      <div id="line">
-      <i class="fa fa-copyright"></i> Celso Rodrigues - 2016
+      <i class="fa fa-copyright"></i>2016 - Celso Rodrigues
      </div>
 
   </body>
