--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- D3 -->
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    
+
 
     <!-- Google Analytics -->
     <script>
@@ -189,10 +189,10 @@
       </li>
         </div>
 
-       	<div><li id="two"><i class="fa fa-cog fa-spin"></i><a href="#" target="_blank">Front End - Project 2</a></li>
+        <div><li id="two"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/global-fluency/gf.html" target="_blank">Front End - Project 2</a></li>
         </div>
 
-        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/global-fluency/gf.html" target="_blank">Front End - Project 3</a></li></div>
+        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="#" target="_blank">Front End - Project 3</a></li></div>
 
        </div>
 
