changed self pic

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
          <div>
            <img src="webpic1a.JPG" height="430" width="250"/>
          </div>
-         <div>
+         <!-- <div>
            <img src="nyc.JPG" height="430" width="250"/>
-         </div>
+         </div> -->
          <div>
            <img src="photo7.JPG" height="430" width="250"/>
          </div>
