--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
            <img src="photo7.JPG" height="430" width="250"/>
          </div>
          <div>
-           <img src="photo8.JPG" height="430" width="250"/>
+           <img src="NY.JPG" height="430" width="250"/>
          </div>
 
        </div>
@@ -153,7 +153,7 @@
          <div class="title2"><b>ABOUT ME</b></div>
          <hr>
           <p>
-            I successfully completed a 10 week <b>Front End Web Development</b> program and immersed myself in another 10 week <b>Data Analysis Circuit</b> program. The process of never to stop learning is certainly what I strive for. My top three core values are:
+            I have successfully completed 10 week programs in <b>Front End Web Development</b> and  <b>Data Analysis Circuit</b>. The process of continual learning is what I strive for. My top three core values are:
           </p>
           <p>
             <b>Passionate about what I do</b> - A few years back, I realized that technology is my passion. I took a leap of faith by moving to SF, got myself involved and connected into this prodigious tech umbrella community.<br><b>Social engagement</b>  - In all of my professional roles, I have always been able to build trust, organically connect with people, reveal genuine sympathy and charisma for others.</br><b>Challenge taker</b> - Life (<i>in all aspects</i>) would be dull and dejected without obstacles. Taking on a challenge is the reassurance of my tenacious spirit and causation.</p>
