--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
          <a href="https://www.facebook.com/?_rdr" target="_blank"><i class="fa fa-facebook"></i></a></li>
        <a href="https://www.facebook.com/?_rdr" target="_blank">
        </a>
+
+       <li><a href="https://github.com/celsojrnet" target="_blank"></a>
+         <a href="https://plus.google.com/u/0/106990512925910437134" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+       <a href="https://plus.google.com/u/0/106990512925910437134" target="_blank">
+       </a>
      </ul>
 
    </div>
