--- a/index.html
+++ b/index.html
@@ -182,16 +182,14 @@
 
        	<div>
 
-          <li id="one"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/gymbuddy.html" targert="_blank">Front End - Project 1</a>
-            <p><a href="https://gomockingbird.com/mockingbird/#cjjp3j5/0RGXLg" targert="_blank">App Wireframing</a></p>
-            <p><a href="http://celsojrnet.github.io/fewd/gymbuddy-stats.html" targert="_blank">App Final Stats</a></p>
+          <li id="one"><i class="fa fa-cog fa-spin"></i><a href="http://crconsulting.co" targert="_blank">Front End - Project 1</a>
       </li>
         </div>
 
-        <div><li id="two"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/global-fluency/gf.html" target="_blank">Front End - Project 2</a></li>
+        <div><li id="two"><i class="fa fa-cog fa-spin"></i><a href="http://puppycatme.com" target="_blank">Front End - Project 2</a></li>
         </div>
 
-        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="#" target="_blank">Front End - Project 3</a></li></div>
+        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/global-fluency/gf.html" target="_blank">Front End - Project 3</a></li></div>
 
        </div>
 
@@ -260,7 +258,7 @@
 
    <hr id="hrA">
      <div id="line">
-      <i class="fa fa-copyright"></i>2016 - Celso Rodrigues
+      <i class="fa fa-copyright"></i>Celso Rodrigues - 2016
      </div>
 
   </body>
