--- a/index.html
+++ b/index.html
@@ -86,6 +86,21 @@
 	});
 });
 
+      // scroll-up to social media
+$(document).ready(function(){
+$('a[href^="#social"]').on('click',function (e) {
+e.preventDefault();
+
+var target = this.hash;
+var $target = $(target);
+
+$('html, body').stop().animate({
+    'scrollTop': $target.offset().top
+}, 900, 'swing', function () {
+    window.location.hash = target;
+});
+});
+});
 
     </script>
 
@@ -187,6 +202,7 @@
        </div>
 
      </div>
+
 
 <!-- portfolio block / section 3 in css -->
      <div id="row3">
