--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ $('html, body').stop().animate({
          <div class="title2"><b>ABOUT ME</b></div>
          <hr>
           <p>
-            I have successfully completed 10 week programs in <b>Front End Web Development</b> and  <b>Data Analysis Circuit</b>. The process of continual learning is what I strive for. My top three core values are:
+            I have successfully completed 10 week programs in <b>Data Analysis</b> and <b>Front End Web Development</b>. The process of continual learning is what I strive for. My top three core values are:
           </p>
           <p>
             <b>Passionate about what I do</b> - A few years back, I realized that technology is my passion. I took a leap of faith by moving to SF, got myself involved and connected into this prodigious tech umbrella community.<br><b>Social engagement</b>  - In all of my professional roles, I have always been able to build trust, organically connect with people, reveal genuine sympathy and charisma for others.</br><b>Challenge taker</b> - Life (<i>in all aspects</i>) would be dull and dejected without obstacles. Taking on a challenge is the reassurance of my tenacious spirit and causation.</p>
