--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ $('html, body').stop().animate({
         <div><li id="two"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/gymbuddy.html" target="_blank">Front End - Project 2</a></li>
         </div>
 
-        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/global-fluency/gf.html" target="_blank">Front End - Project 3</a></li></div>
+        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="http://puppycatme.com/" target="_blank">Front End - Project 3</a></li></div>
 
        </div>
 
