margin left change

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ $('html, body').stop().animate({
      <div id="row2">
 
        <div class="about">
-         <b>JR DATA ANALYST | FRONT END DEVELOPER</b>
+         <b>DATA RESEARCH ANALYST | FRONT END DEVELOPER</b>
        </div>
 
        <div class="slideshow">
