--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="celso1.css" media="screen" title="text/css">
     <link rel="stylesheet" href="celso1.css" media="screen and (max-width:600px)">
 
+
     <!-- fontcdn.org -->
     <link href='https://fonts.googleapis.com/css?family=Italiana' rel='stylesheet' type='text/css'>
 
@@ -248,21 +249,21 @@ $('html, body').stop().animate({
          <div class="quote"><p>"How is it to work with Celso?..." <i class="fa fa-users"></i></p></div>
 
          <div class="horizon-swiper">
-            <div><img src="IMG_5667.JPG" width:"640" height:"350"></div>
+            <div><img src="img1.png" width:"640" height:"350"></div>
 
-            <div><img src="IMG_5668.JPG" width:"640" height:"350"></div>
+            <div><img src="img2.png" width:"640" height:"350"></div>
 
-            <div><img src="IMG_5669.JPG" width:"640" height:"350"></div>
+            <div><img src="img3.png" width:"640" height:"350"></div>
 
-            <div><img src="IMG_5670.JPG" width:"640" height:"350"></div>
+            <div><img src="img4.png" width:"640" height:"350"></div>
 
-            <div><img src="IMG_5672.JPG" width:"640" height:"350"></div>
+            <div><img src="img5.png" width:"640" height:"350"></div>
 
-            <div><img src="IMG_5674.JPG" width:"640" height:"350"></div>
+            <div><img src="img6.png" width:"640" height:"350"></div>
 
-            <div><img src="IMG_5675.JPG" width:"640" height:"350"></div>
+            <div><img src="img7.png" width:"640" height:"350"></div>
 
-            <div><img src="IMG_5677.JPG" width:"640" height:"350"></div>
+            <div><img src="img8.png" width:ap"640" height:"350"></div>
 
          </div>
 
