--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ $('html, body').stop().animate({
      <div id="row2">
 
        <div class="about">
-         <b>DATA RESEARCH ANALYST | TECH BUSINESS DEV (TBD)</b>
+         <b>DATA RESEARCH ANALYST | FRONT-END DEV</b>
        </div>
 
        <div class="slideshow">
@@ -191,7 +191,7 @@ $('html, body').stop().animate({
          <div class="title2"><b>ABOUT ME</b></div>
          <hr>
           <p>
-            My professional background in Tech Startup Ops, Business Ops and CX, has given me a positive outcome in my career. I have successfully completed 10 week programs in <b>Data Analysis</b> and <b>Front End Web Development</b>. The process of continual learning is what I strive for. My top three core values are:
+            My professional background in Tech Startup Ops, Business Ops and CX, has given me a positive outcome in my career. I have successfully completed 10 week programs in <b>Data Analysis</b> and <b>Front-End Web Development</b>. The process of continual learning is what I strive for. My top three core values are:
           </p>
           <p>
             <b>Passionate about what I do</b> - A few years back, I realized that technology is my passion. I took a leap of faith by moving to SF, got myself involved and connected into this prodigious tech umbrella community.<br><b>Social engagement</b>  - In all of my professional roles, I have always been able to build trust, organically connect with people, reveal genuine sympathy and charisma for others.</br><b>Challenge taker</b> - Life (<i>in all aspects</i>) would be dull and dejected without obstacles. Taking on a challenge is the reassurance of my tenacious spirit and causation.</p>
@@ -216,14 +216,14 @@ $('html, body').stop().animate({
 
        	<div>
 
-          <li id="one"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/gymbuddy-stats.html" targert="_blank">Front End - Project 1</a>
+          <li id="one"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/gymbuddy-stats.html" targert="_blank">Front-End - Project 1</a>
       </li>
         </div>
 
-        <div><li id="two"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/gymbuddy.html" target="_blank">Front End - Project 2</a></li>
+        <div><li id="two"><i class="fa fa-cog fa-spin"></i><a href="http://celsojrnet.github.io/fewd/gymbuddy.html" target="_blank">Front-End - Project 2</a></li>
         </div>
 
-        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="http://puppycatme.com/" target="_blank">Front End - Project 3</a></li></div>
+        <div><li id="three"><i class="fa fa-cog fa-spin"></i><a href="http://puppycatme.com/" target="_blank">Front-End - Project 3</a></li></div>
 
        </div>
 
