--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ $('html, body').stop().animate({
      <div id="row2">
 
        <div class="about">
-         <b>DATA RESEARCH ANALYST | FRONT-END DEV</b>
+         <b>DATA RESEARCH ANALYST CONSULTANT</b>
        </div>
 
        <div class="slideshow">
